# squid

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: changelog.mdc  constraints.mdc  conventions.mdc  demo.mdc  modules.mdc  poulpy-concepts.mdc  project.mdc  squid-js.mdc
.github/workflows/: ci.yml
crates/squid/: Cargo.toml
crates/squid-napi/src/: lib.rs
crates/squid-wasm/src/: lib.rs
crates/squid/src/: context.rs  keys.rs
crates/squid/tests/: bdd_ops.rs  bdd_parallel.rs  ciphertext_serialization.rs  keygen_seeds.rs
demo/: next.config.ts  package.json
demo/scripts/: generate-demo-ek.mjs
demo/src/app/: layout.tsx  page.tsx
demo/src/app/api/add/: route.ts
demo/src/components/: Demo.tsx  DemoLoader.tsx
demo/src/components/atoms/: Btn.tsx  ByteViewer.tsx  Chip.tsx  Fingerprint.tsx  NoiseMeter.tsx  StepHeader.tsx  StripePlaceholder.tsx
demo/src/components/mascot/: Poulpy.tsx
demo/src/components/terminal/: ServerTerminal.tsx
demo/src/hooks/: useFhe.ts
demo/src/lib/: fhe-types.ts  fingerprint.ts  load-demo-evaluator.ts  pack.ts
examples/: add_u32.rs  serialize_keys.rs
src/: backend.rs  ciphertext.rs  context.rs  keys.rs  lib.rs  scratch.rs
tests/: bdd_parallel.rs  ciphertext_serialization.rs  evaluation_key_serialization.rs  key_serialization.rs  keygen_seeds.rs  package.json  playwright.config.ts  tsconfig.json
tests/common/: mod.rs
