[package]
name = "squid"
version = "0.1.0-alpha.1"
edition = "2021"
description = "An ergonomic Rust wrapper for Poulpy FHE."
license = "MIT"

[features]
backend-avx = ["dep:poulpy-cpu-avx"]

[dependencies]
poulpy-core = { git = "https://github.com/poulpy-fhe/poulpy.git", rev = "e5450f9a51884082c293c8a13846c8a6fb310626" }
poulpy-schemes = { git = "https://github.com/poulpy-fhe/poulpy.git", rev = "e5450f9a51884082c293c8a13846c8a6fb310626" }
poulpy-hal = { git = "https://github.com/poulpy-fhe/poulpy.git", rev = "e5450f9a51884082c293c8a13846c8a6fb310626" }
poulpy-cpu-ref = { git = "https://github.com/poulpy-fhe/poulpy.git", rev = "e5450f9a51884082c293c8a13846c8a6fb310626" }
poulpy-cpu-avx = { git = "https://github.com/poulpy-fhe/poulpy.git", rev = "e5450f9a51884082c293c8a13846c8a6fb310626", optional = true }
getrandom = "0.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
poulpy-cpu-avx = { git = "https://github.com/poulpy-fhe/poulpy.git", rev = "e5450f9a51884082c293c8a13846c8a6fb310626", optional = true, features = ["enable-avx"] }
