[workspace]
resolver = "2"
members = [
    "crates/squid",
    "crates/squid-wasm",
    "crates/squid-napi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Omar Desogus <me@cedoor.dev>"]

[workspace.dependencies]
squid = { path = "crates/squid", default-features = false }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
